# MMM

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  convert_to_onnx.pys  mmm.py  pyproject.toml
.github/: codecov.yml
.github/workflows/: docs.yml  publish-pypi.yml  pytest.yml
docs/: conf.py  examples.rst  index.rst  inference.rst  training.rst
docs/public/doctrees/: environment.pickle  examples.doctree  index.doctree  inference.doctree  training.doctree
docs/public/html/: .buildinfo  examples.html  genindex.html  index.html  inference.html  objects.inv  search.html  searchindex.js  training.html
docs/public/html/_sources/: examples.rst.txt  inference.rst.txt  training.rst.txt
mmm/: __init__.py  config.py  data_loading.py  inference.py  logits_processor.py  mmm.py
runs/: tokenizer.json
runs/MMMBaseline_GigaMIDI/: tokenizer.json
runs/MMM_T5/: tokenizer.json
runs/MMM_seq2seq/: tokenizer.json
scripts/: __init__.py  preprocess_dataset.py  push_model_to_hf_hub.py  train_model.py  train_model_loop.sh  train_tokenizer.py
scripts/analysis/: analyze_gigamidi_dataset.py  dataset_length_bars-beats.py  dataset_programs_dist.py  dataset_short_files.py
scripts/old/: preprocess_dataset.py
scripts/utils/: __init__.py  baselines.py  classes.py  constants.py  training.py  utils.py
scripts/utils/GigaMIDI/: GigaMIDI.py  README.md  __init__.py  create_gigamidi_dataset.py
scripts/utils/GigaMIDI/parquet/: README.md
slurm/: ds_config.json  install_dependencies.sh  install_flashattention.sh  metamidi_midi_audio_matching.sh  preprocess_data.sh  train_mistral.sh  train_model.sh  train_t5.sh  train_tokenizer.sh  unzip_gigamidi.sh
slurm/cedar/: train_gpt2.sh  train_mistral.sh  train_t5.sh
slurm/narval/: train_gpt2.sh  train_mistral.sh  train_t5.sh
tests/: test_dataset.py  test_inference.py  utils_tests.py
tests/midis/: mmmtest3.mid
tests/tests_output/: midi_out.mid  midi_out_bpe.mid  midi_out_bpe_dummy.mid
utils/: baseline.py  classes.py  constants.py  data_loading.py  inference.py  training.py  utils.py
utils/GigaMIDI/: GigaMIDI.py  README.md  create_gigamidi_dataset.py  gigamidi.py  metamidi_md5_audio_matching.py
